# lindenmayer-systems-rs

./: .gitignore  README.md  compile
2_Abstract/resources/: abstract.tex
3_Documentation/resources/: documentation.tex  lpi.sty  references.bib
4_Diaries/resources/: diaries.tex
5_Source/lindenmayer-gui/src/: config.rs  main.rs  ui.rs
5_Source/lindenmayer-parser/: Cargo.toml
5_Source/lindenmayer-parser/src/: export.rs  lib.rs
5_Source/lindenmayer-renderer/: Cargo.toml
5_Source/lindenmayer-renderer-cairo/: Cargo.toml
5_Source/lindenmayer-renderer-cairo/src/: lib.rs
5_Source/lindenmayer-renderer/src/: canvas.rs
examples/: alga.lsys  binary.lsys  colorful_algae.lsys  fireflies.lsys  mandelbrot.lsys  morning_star.lsys  stickman.lsys  storm.lsys  sunset.lsys
lindenmayer-engine/: Cargo.toml
lindenmayer-engine/src/: lib.rs
lindenmayer-gui/: Cargo.toml
lindenmayer-gui/src/: animations.rs  helpers.rs  logic.rs  ui.rs
lindenmayer-gui/src/style/: style.css
lindenmayer-parser/: README.md
lindenmayer-parser/src/: import.rs  lib.rs
lindenmayer-renderer/src/: canvas.rs  lib.rs
lindenmayer-renderer/src/expressions/: mod.rs
mandate/resources/abstract/: abstract.tex
mandate/resources/documentation/: documentation.tex
