[package]
name = "lindenmayer-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meval = "0.2.0"
lindenmayer-engine = { path = "../lindenmayer-engine" }

rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"